kickseed (0.33) UNRELEASED; urgency=low

  * Fix %packages handling to account for names in aptitude patterns really
    being unanchored regular expressions.

 -- Colin Watson <cjwatson@ubuntu.com>  Sun, 11 Dec 2005 10:07:04 +0000

kickseed (0.32) dapper; urgency=low

  * Use log-output so that log messages go to syslog and are tagged as
    coming from kickseed.
  * Simplify prebaseconfig script.
  * Remove Standards-Version:, not applicable to udebs.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 27 Oct 2005 12:44:49 +0100

kickseed (0.31) breezy; urgency=low

  * Add "Ubuntu Standard" and "Kubuntu Standard" package groups, which
    install the ubuntu-standard and kubuntu-standard tasks respectively.

 -- Colin Watson <cjwatson@ubuntu.com>  Fri,  7 Oct 2005 16:38:07 +0100

kickseed (0.30) breezy; urgency=low

  * Fix NFS mount error dialog.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon,  8 Aug 2005 18:29:31 +0100

kickseed (0.29) breezy; urgency=low

  * Update timezone to be able to cope with clock-setup and tzsetup udebs.
  * Display an error if we can't fetch the Kickstart file from HTTP/FTP, or
    if we can't mount the given NFS server.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon,  8 Aug 2005 15:04:13 +0100

kickseed (0.28) breezy; urgency=low

  * Make 'lang' preseed debian-installer/locale as well as preseed/locale,
    in order to work with localechooser >= 0.07.

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 19 Jul 2005 17:23:27 +0100

kickseed (0.27) breezy; urgency=low

  * Use 'mount -o nolock' when retrieving Kickstart files over NFS, which is
    massively faster since we aren't running the usual userspace support.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 20 Jun 2005 19:05:02 +0100

kickseed (0.26) breezy; urgency=low

  * Implement device --opts, now that hw-detect supports it.
  * Implement bootloader --password and --md5pass options.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon,  6 Jun 2005 12:17:24 +0100

kickseed (0.25) breezy; urgency=low