@@ -2,6 +2,7 @@
 
 rootpw_handler () {
 	setpassword=1
+	crypted=
 
 	eval set -- "$(getopt -o '' -l disabled,iscrypted -- "$@")" || { warn_getopt rootpw; return; }
 	while :; do
@@ -11,8 +12,7 @@ rootpw_handler () {
 				shift
 				;;
 			--iscrypted)
-				# requires passwd 1:4.0.3-30.7ubuntu7
-				ks_preseed passwd passwd/root-password-crypted boolean true
+				crypted=1
 				shift
 				;;
 			--)	shift; break ;;
@@ -25,14 +25,19 @@ rootpw_handler () {
 			warn "rootpw command requires a password"
 			return
 		fi
+
+		if [ "$crypted" ] && [ "$1" ]; then
+			# requires passwd 1:4.0.13-5
+			ks_preseed passwd passwd/root-password-crypted password "$1"
+		else
+			# requires passwd 1:4.0.3-30.7ubuntu6
+			ks_preseed passwd passwd/root-password password "$1"
+			ks_preseed passwd passwd/root-password-again password "$1"
+			if [ -z "$1" ]; then
+				ks_preseed passwd passwd/root-password-empty note ''
+			fi
+		fi
 	else
 		set -- ''
-	fi
-
-	# requires passwd 1:4.0.3-30.7ubuntu6
-	ks_preseed passwd passwd/root-password password "$1"
-	ks_preseed passwd passwd/root-password-again password "$1"
-	if [ -z "$1" ]; then
-		ks_preseed passwd passwd/root-password-empty note ''
 	fi
 }
